Changes in Ferry