@@ -1,8 +1,9 @@
-import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.List;
 
 public class Storage implements ILoadable {
     private int maxSize;
-    private ArrayDeque <Object> storedObjects = new ArrayDeque<>();
+    private List<Object> storedObjects = new ArrayList<>();
 
     public Storage(int maxSize){
         this.maxSize = maxSize;
@@ -11,20 +12,15 @@ public class Storage implements ILoadable {
     @Override
     public void load(Object object){
         if(storedObjects.size() < maxSize) {
-            storedObjects.push(object);
+            storedObjects.add(object);
         }
     }
 
-    // TODO Work in progress
     @Override
-    public Object unload() {
-        return new Object();
-    }
-
-    public Object removeFirstStored(){
+    public Object removeAtIndex(int i){
         Object removed = new Object();
         if(storedObjects.size() > 0){
-            removed = storedObjects.removeLast();
+            removed = storedObjects.remove(i);
         }
         else{
             System.out.println("Cannot remove object as Storage is empty");
@@ -32,10 +28,23 @@ public class Storage implements ILoadable {
         return removed;
     }
 
+    @Override
+    public Object removeFirstStored(){
+        Object removed = new Object();
+        if(storedObjects.size() > 0){
+            removed = storedObjects.remove(0);
+        }
+        else{
+            System.out.println("Cannot remove object as Storage is empty");
+        }
+        return removed;
+    }
+
+    @Override
     public Object removeLastStored(){
         Object removed = new Object();
         if(storedObjects.size() > 0){
-            removed = storedObjects.removeFirst();
+            removed = storedObjects.remove(storedObjects.size() - 1);
         }
         else{
             System.out.println("Cannot remove object as Storage is empty");
